[tool.poetry]
name = "commission-pools"
version = "0.1.0"
description = "Small script to convert hoardbooru relations into pools"
authors = ["Deer-Spangle <deer@spangle.org.uk>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyszuru = "^0.3.1"
pyyaml = "^6.0.2"
notion-client = "^2.3.0"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
